--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -38,9 +38,11 @@ body
 	opacity: 1
 
 .img-responsive
-	display: block
-	max-width: 100%
-	height: auto
+	background-repeat: no-repeat
+	background-position: center
+	background-size: cover
+	width: 100%
+	height: 100vh
 
 
 
